--- a/staff-login.html
+++ b/staff-login.html
@@ -267,7 +267,7 @@
 <body>
     <div class="container">
         <div class="navigation">
-            <a href="index.html" class="nav-link">← กลับหน้าหลัก</a>
+            <a href="user-selection.html" class="nav-link">← กลับหน้าหลัก</a>
         </div>
         
         <div class="login-form">
@@ -286,7 +286,7 @@
                 </div>
                 
                 <div class="button-group">
-                    <a href="staff-dashboard.html" class="login-btn">เข้าสู่ระบบ</a>
+                    <a href="staff-student-management.html" class="login-btn">เข้าสู่ระบบ</a>
                     <button type="button" class="forgot-btn">ลืมรหัสผ่าน?</button>
                 </div>
             </form>
