--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 <img src="logoKMUTNB.png" alt="มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ" class="university-logo">
                 <img src="fitm.png" alt="Faculty of Industrial Technology and Management" class="faculty-logo">
             </div>
-            <h1>🎓 เข้าสู่ระบบ</h1>
+            <h1>🎓ระบบจัดการโครงงานมหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ</h1>
             <h2>เลือกประเภทผู้ใช้งาน</h2>
             
             <div class="menu-options">
