--- a/user-selection.html
+++ b/user-selection.html
@@ -364,8 +364,8 @@
                 <img src="logoKMUTNB.png" alt="มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ" class="university-logo">
                 <img src="fitm.png" alt="Faculty of Industrial Technology and Management" class="faculty-logo">
             </div>
-            <h1>🎓 เข้าสู่ระบบ</h1>
-            <h2>เลือกประเภทผู้ใช้งาน</h2>
+              <h1>🎓ระบบจัดการโครงงาน</h1>
+            <h2>ระบบจัดการโครงงานนักศึกษาภาควิชาเทคโนโลยีสารสนเทศ</h2>
             
             <div class="menu-options">
                 <a href="student-login.html" class="menu-card student-card">
