--- a/assessment.html
+++ b/assessment.html
@@ -431,7 +431,7 @@
              
                 <a href="staff-exam-creation.html" class="nav-link">
                     <span class="nav-icon">📋</span>
-                    สร้างการสอบออนไลน์
+                    นักศึกษายื่นหัวข้อ
                 </a>
                 <a href="staff-progress-reports.html" class="nav-link">
                     <span class="nav-icon">📈</span>
@@ -494,7 +494,7 @@
                         <input type="text" class="score-input" placeholder="Enter score">
                     </div>
                     <div class="score-info">
-                        <p class="score-details">คะแนนเต็ม 10 คะแนน - ประเมินจากความครบถ้วนและความชัดเจนของการรายงาน</p>
+                        <p class="score-details">คะแนนเต็ม 30 คะแนน - ประเมินจากความครบถ้วนและความชัดเจนของการรายงาน</p>
                     </div>
                 </div>
 
@@ -504,7 +504,7 @@
                         <input type="text" class="score-input" placeholder="Enter score">
                     </div>
                     <div class="score-info">
-                        <p class="score-details">คะแนนเต็ม 15 คะแนน - ประเมินจากความถูกต้องและความสมบูรณ์ของการตีรหัส</p>
+                        <p class="score-details">คะแนนเต็ม 30 คะแนน - ประเมินจากความถูกต้องและความสมบูรณ์ของการตีรหัส</p>
                     </div>
                 </div>
 
@@ -514,7 +514,7 @@
                         <input type="text" class="score-input" placeholder="Enter score">
                     </div>
                     <div class="score-info">
-                        <p class="score-details">คะแนนเต็ม 10 คะแนน - ประเมินจากความถูกต้องและความครบถ้วนของการกรอกข้อมูล</p>
+                        <p class="score-details">คะแนนเต็ม 40 คะแนน - ประเมินจากความถูกต้องและความครบถ้วนของการกรอกข้อมูล</p>
                     </div>
                 </div>
 
@@ -522,7 +522,7 @@
                 <div class="result-section">
                     <div class="result-title">ผลรวม</div>
                     <div class="result-info">
-                        <div class="total-score">0 / 35 คะแนน</div>
+                        <div class="total-score">0 / 100 คะแนน</div>
                         <div class="score-breakdown">กรุณากรอกคะแนนในแต่ละหัวข้อ</div>
                     </div>
                 </div>
