--- a/project-documents-backup.html
+++ b/project-documents-backup.html
@@ -791,7 +791,7 @@
              
                 <a href="exam-management.html" class="nav-link">
                     <span class="nav-icon">📋</span>
-                    สร้างการสอบออนไลน์
+                    นักศึกษายื่นหัวข้อ
                 </a>
                 <a href="project-reports.html" class="nav-link">
                     <span class="nav-icon">📈</span>
@@ -970,7 +970,7 @@
                         <td>
                             <a href="#" class="document-link">
                                 <span class="document-icon">📊</span>
-                                รายงานความก้าวหน้า_งวดที่1.pdf
+                                รายงานความก้าวหน้าที่1.pdf
                             </a>
                         </td>
                         <td>รายงานความก้าวหน้า</td>
@@ -995,7 +995,7 @@
                             </div>
                         </td>
                         <td>
-                            <span style="color: #999;">รายงานความก้าวหน้า_งวดที่2.pdf</span>
+                            <span style="color: #999;">รายงานความก้าวหน้าที่2.pdf</span>
                         </td>
                         <td>รายงานความก้าวหน้า</td>
                         <td>-</td>
