--- a/staff-student-details.html
+++ b/staff-student-details.html
@@ -328,7 +328,7 @@
             
                 <a href="staff-exam-creation.html" class="nav-link">
                     <span class="nav-icon">📋</span>
-                    สร้างการสอบออนไลน์
+                    นักศึกษายื่นหัวข้อ
                 </a>
                
                 <a href="staff-progress-reports.html" class="nav-link">
@@ -535,7 +535,7 @@
                     <table class="progress-table">
                         <thead>
                             <tr>
-                                <th>งวดรายงาน</th>
+                                <th>รายงาน</th>
                                 <th>วันที่ส่ง</th>
                                 <th>สถานะ</th>
                                 <th>คะแนน</th>
@@ -545,7 +545,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>งวดที่ 1</td>
+                                <td>รายงานที่ 1</td>
                                 <td>15/09/2024</td>
                                 <td><span class="grade-badge grade-a">เสร็จสมบูรณ์</span></td>
                                 <td>85/100</td>
@@ -553,7 +553,7 @@
                                 <td><button class="btn-view" style="background:#F15A24;color:white;border:none;padding:5px 10px;border-radius:3px;">ดูรายละเอียด</button></td>
                             </tr>
                             <tr>
-                                <td>งวดที่ 2</td>
+                                <td>รายงานที่ 2</td>
                                 <td>15/10/2024</td>
                                 <td><span class="grade-badge grade-b">รอการตรวจ</span></td>
                                 <td>-</td>
@@ -561,7 +561,7 @@
                                 <td><button class="btn-view" style="background:#ffc107;color:#333;border:none;padding:5px 10px;border-radius:3px;">ตรวจสอบ</button></td>
                             </tr>
                             <tr>
-                                <td>งวดที่ 3</td>
+                                <td>รายงานที่ 3</td>
                                 <td>-</td>
                                 <td><span class="grade-badge grade-c">ยังไม่ส่ง</span></td>
                                 <td>-</td>
