--- a/exam-management.html
+++ b/exam-management.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>สร้างการสอบออนไลน์ - Staff Portal</title>
+    <title>นักศึกษายื่นหัวข้อ - Staff Portal</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -579,7 +579,7 @@
              
                 <a href="staff-exam-creation.html" class="nav-link active">
                     <span class="nav-icon">📋</span>
-                    สร้างการสอบออนไลน์
+                    นักศึกษายื่นหัวข้อ
                 </a>
                 <a href="staff-progress-reports.html" class="nav-link">
                     <span class="nav-icon">📈</span>
