--- a/grading-backup2.html
+++ b/grading-backup2.html
@@ -606,7 +606,7 @@
            
                 <a href="exam-management.html" class="nav-link">
                     <span class="nav-icon">📋</span>
-                    สร้างการสอบออนไลน์
+                    นักศึกษายื่นหัวข้อ
                 </a>
                
                 <a href="project-reports.html" class="nav-link">
