--- a/project-documents.html
+++ b/project-documents.html
@@ -706,7 +706,7 @@
                 font-size: 12px;
                 margin: 2px;
             }
-        }
+        
     </style>
 </head>
 <body>
@@ -727,7 +727,7 @@
              
                 <a href="staff-exam-creation.html" class="nav-link">
                     <span class="nav-icon">📋</span>
-                    สร้างการสอบออนไลน์
+                    นักศึกษายื่นหัวข้อ
                 </a>
                 <a href="staff-progress-reports.html" class="nav-link">
                     <span class="nav-icon">📈</span>
