--- a/staff-exam-schedule.html
+++ b/staff-exam-schedule.html
@@ -975,7 +975,7 @@
              
                 <a href="staff-exam-creation.html" class="nav-link">
                     <span class="nav-icon">📋</span>
-                    สร้างการสอบออนไลน์
+                    นักศึกษายื่นหัวข้อ
                 </a>
                 <a href="staff-progress-reports.html" class="nav-link">
                     <span class="nav-icon">📈</span>
