--- a/student-course-info.html
+++ b/student-course-info.html
@@ -641,7 +641,7 @@
     </style>
 </head>
 <body>
-       <nav class="navbar">
+       <nav class="navbar" data-nav-type="student">
         <div class="nav-container">
             <div class="nav-brand">
                 <img src="fitm.png" alt="kmutnb logo" style="width:80px;height:50px;vertical-align:middle;">
@@ -678,10 +678,10 @@
             
             <div class="nav-user">
                 <div class="user-info">
-                    <span class="user-name">นักศึกษา</span>
-                    
+                    <span class="user-name" data-user-name>นักศึกษา</span>
+                    <span class="user-role" data-user-role></span>
                 </div>
-                <a href="user-selection.html" class="nav-logout">
+                <a href="#" class="nav-logout" data-logout>
                     <span class="nav-icon">🚪</span>
                     ออกจากระบบ
                 </a>
